fix(component): ajusts city name length on mobile
ajusts city name aloging itself beautifully now that the whole card layout is on grid

BREAKING CHANGE: inutilizes truncate pipe

--- a/climao/src/app/components/city-weather/city-weather.component.scss
+++ b/climao/src/app/components/city-weather/city-weather.component.scss
@@ -1,9 +1,7 @@
 @import '../../../styles/theme';
 
 .simple-card {
-  min-width: 275px;
-  width: 95%;
-  max-width: 350px;
+  width: 100%;
   padding: 15px 20px;
   background-color: $color-white;
 
@@ -11,17 +9,24 @@
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.06), 0px 1px 3px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
 
-  display: flex;
-  justify-content: space-between;
-
+  display: grid;
+  grid-template-areas:
+    "icon city-name"
+    "icon wind";
+  gap: 0.5rem;
   font-family: 'Lobster', cursive;
   font-size: 18px;
+
   .info-left {
+    grid-area: icon;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+
     .weather-icon {
       border-radius: 100px;
     }
+
     .weather-description {
       margin-top: 0.5rem;
 
@@ -31,28 +36,41 @@
       font-weight: normal;
     }
   }
-  .info-right {
+
+  .location-info {
+    grid-area: city-name;
+    place-self: start end;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    .location-data {
-      align-self: flex-end;
-      color: $color-gray-900;
-      span {
-        margin-left: 0.5rem;
-        font-size: 24px;
-      }
+    justify-content: space-evenly;
+    align-items: flex-start;
+    color: $color-gray-900;
+    .city-name {
+      text-align: right;
+      max-width: 150px;
+      font-size: 1em;
     }
-    .wind-data {
-      display: grid;
-      grid-template-columns: repeat(4, auto);
-      align-items: center;
-      gap: 0.5rem;
-      .wind-dir {
-        color: $color-gray-900;
-        font-family: 'Roboto', sans-serif;
-        font-weight: 700;
-      }
+    .temperature-data {
+      margin-left: 0.5rem;
+      font-size: 1.5rem;
+      white-space: nowrap;
+    }
+  }
+
+  .wind-data {
+    grid-area: wind;
+    place-self: end end;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+
+    >*+* {
+      margin-left: 0.5rem;
+    }
+
+    .wind-dir {
+      color: $color-gray-900;
+      font-family: 'Roboto', sans-serif;
+      font-weight: 700;
     }
   }
 }
