--- a/climao/src/app/pages/mobile-page/mobile-page.component.scss
+++ b/climao/src/app/pages/mobile-page/mobile-page.component.scss
@@ -5,16 +5,16 @@
 }
 
 .cities {
-  width: 95%;
+  min-width: 275px;
+  width: 90%;
   margin: 0 auto 1rem;
   display: grid;
-  // flex-direction: column;
   grid-template-columns: repeat(auto-fill, minmax(275px, 1fr));
   justify-items: center;
+  align-items: center;
   gap: 1rem;
-  // .city-weather {
-  //   & + .city-weather {
-  //     margin-top: 1rem;
-  //   }
-  // }
+  .city-weather {
+    min-width: 275px;
+    width: 95%;
+  }
 }
